RESOLVED FIXED215542
REGRESSION(r265725) [GTK][WPE] Several http/tests timeout/failures
https://bugs.webkit.org/show_bug.cgi?id=215542
Summary REGRESSION(r265725) [GTK][WPE] Several http/tests timeout/failures
Lauro Moura
Reported 2020-08-15 10:07:25 PDT
After r265725 (bug21571) a lot of http/tests are either failing or timing out, leading all GTK/WPE test bots to exit early. Many tests fail with messages like "CONSOLE MESSAGE: ReferenceError: Can't find variable: promise_test", like if it wasn't able to load the test javascript files. Running the tests manually with MiniBrowser seems to work (failing with the expected missing test runner, though) and navigation seems fine. The mentioned revision did not change anything outside Source/WebKit. Maybe something missing from GTK/WPE's WTR?
Attachments
Patch (1.75 KB, patch)
2020-08-17 03:24 PDT, Carlos Garcia Campos
no flags
Lauro Moura
Comment 1 2020-08-15 10:29:48 PDT
Adding original revision author and reviewer as cc. Gardened in r265733 to allow the other tests to be run.
Lauro Moura
Comment 2 2020-08-15 11:52:55 PDT
(In reply to Lauro Moura from comment #1) > Adding original revision author and reviewer as cc. > > Gardened in r265733 to allow the other tests to be run. Gardening just http/tests was not enough. Lots of failures in http/wpt and other imported test too: https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r265734%20(15271)/results.html
Lauro Moura
Comment 3 2020-08-16 22:20:05 PDT
Running the failed tests in isolation there seems to be no issue. I'm using the following test list: LayoutTests/imported/w3c/web-platform-tests/FileAPI/url/url-in-tags-revoke.window.html LayoutTests/imported/w3c/web-platform-tests/FileAPI/url/url-with-xhr.any.html The second one always fails with a timeout when running after the first one in the same worker process. journalctl shows the HTTP requests returning 200 normally from the server, but the failed test run lacks the WebProcess SubresourceLoader::didFinishLoading messages in comparison to a normal run.
Diego Pino
Comment 4 2020-08-17 01:39:47 PDT
*** Bug 215560 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 5 2020-08-17 03:24:12 PDT
EWS
Comment 6 2020-08-17 04:04:40 PDT
Committed r265751: <https://trac.webkit.org/changeset/265751> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406710 [details].
Radar WebKit Bug Importer
Comment 7 2020-08-17 04:05:20 PDT
Kate Cheney
Comment 8 2020-08-17 09:05:40 PDT
Thanks for landing a fix for this!
Note You need to log in before you can comment on or make changes to this bug.