REGRESSION(r265725) [GTK][WPE] Several http/tests timeout/failures https://bugs.webkit.org/show_bug.cgi?id=215542

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2020-08-17
Reviewed by Sergio Villar Senin.

The problem is that ShareableResource is now using the dataSize member of IPCHandle to encode/decode the
resource size, but SharedMemoryUnix is not encoding/decoding dataSize.

* Platform/unix/SharedMemoryUnix.cpp:
(WebKit::SharedMemory::IPCHandle::encode const):
(WebKit::SharedMemory::IPCHandle::decode):

Canonical link: https://commits.webkit.org/228322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265751 268f45cc-cd09-0410-ab3c-d52691b4dbfc